uhh i guess the background has no more gaps and this is temporary fix.

--- a/src/components/home/map.css
+++ b/src/components/home/map.css
@@ -1,9 +1,9 @@
+
 .map-container {
   height: 400px; 
   width: 96%; 
   margin-left: 2%; 
-  margin-bottom: 1rem;
-  
+  bottom: 90px
 }
 
 @media (max-width: 768px) {
